# PatternAnalysis-2023

./: .gitignore  .gitmodules  47184530.ipynb  ADNI_Brain_Visual_Transformer_47306725.ipynb  AE_model.py  Colab version.ipynb  Data_Loader.py  DiffusionTry.ipynb  Discriminator.py  GCN.pt  ISIC_leisons_detection.ipynb  LPIPS.py  Losses.py  Metrics.py  Ploting.py  READ.ME  README.md  READMEe.md  SSIM.py  VIT_test.py  VQVAE_model.py  __init__.py  check_ind.ipynb  comp3710-report.ipynb  data_loading.py  dataset.py  datasplit.py  dependencies.txt  diffusion_visualize.py  discriminator.py  err.txt  eval.py  final_model.pth  image_characteristics.py  latent_dataset.py  logger.py  main.py  model.py  model_AE.py  model_VAE.py  (+38 more)
46983820/: README.md  module.py  plot.py  test.py
Alzheimers-classification-using-ADNI-48245764/: dataset.py  modules.py  predict.py  train.py
BrainVQVAE_s4698512/: dataset.py  modules.py  notes.md  predict.py  train.py
Brain_MRI_SuperResolution/: README.md  predict.py  test.py  train.py
Lab-Report/: README.md  modules.py  predict.py  train.py
ModelParams/: best.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt  model_5.pt  model_6.pt  model_7.pt  model_8.pt  model_9.pt
ModelParams_MSE/: best.pt
Modules/: PixelCNN.py  VQ_VAE.py
OASIS_VQ_VAE_s4698512/: Checklist.md  README.md
Siamese/: VGG.py  dataset.py  modules.py  predict.py  train.py
SiameseNetworkClassifier_Fanhao_Zeng_46398086/: requirements.txt
VIT-4599281/: README.md  processing.py  train.py
VIT-45992816/: README.md
VQ_VAE_46992925/: DataPrep.py  (+3 more)
poetry-demo/: pyproject.toml
(+1591 files in other folders)
